aggiunti unit test ed integration test per cliente ed export del pdf